# sov

./: .crates.toml  .crates2.json  Cargo.toml  README.md
config/: admin-cli.yaml  analyzer.yaml  net-sensor.yaml  net-sensor.yaml.win  node-sensor.yaml  node-sensor.yaml.win  operator-cli.yaml  roles.yaml  rules.yaml
config/pki/: admin.crt  admin.key  analyzer.crt  analyzer.key  ca.crt  ca.key  ca.srl  operator.crt  operator.key  sensor-net.crt  sensor-net.key  sensor-node.crt  sensor-node.key  server.ext
scripts/linux/: admin-cli.sh  analyzer.sh  env.sh  gen-pki.sh  net-sensor.sh  node-sensor.sh  operator-cli.sh  start-all.sh  start-sensors.sh
scripts/windows/: admin-cli.ps1  analyzer.ps1  env.ps1  gen-pki.ps1  net-sensor.ps1  node-sensor.ps1  operator-cli.ps1
sov-admin-cli/: Cargo.toml
sov-admin-cli/src/: main.rs
sov-analyzer/: Cargo.toml
sov-analyzer/src/: main.rs
sov-core/: Cargo.toml
sov-core/src/: audit.rs  config.rs  lib.rs  model.rs  roles.rs  rules.rs
sov-operator-cli/: Cargo.toml
sov-operator-cli/src/: main.rs
sov-sensor-net/: Cargo.toml
sov-sensor-net/src/: main.rs
sov-sensor-node/: Cargo.toml
sov-sensor-node/src/: main.rs
sov-sensor-node/src/source/: linux.rs  mod.rs  windows.rs
sov-transport/: Cargo.toml
sov-transport/src/: lib.rs  tls.rs
