[package]
name = "sov-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
sov-core = { path = "../sov-core" }
sov-transport = { path = "../sov-transport" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
