[package]
name = "sov-sensor-net"
version = "0.1.0"
edition = "2024"

[dependencies]
sov-core = { path = "../sov-core" }
sov-transport = { path = "../sov-transport" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
pcap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

