[package]
name = "sov-sensor-node"
version = "0.1.0"
edition = "2024"

[dependencies]
sov-core = { path = "../sov-core" }
sov-transport = { path = "../sov-transport" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"


[features]
default = []
windows-eventlog = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", optional = true, features = [
  "Win32_Foundation",
  "Win32_System_EventLog",
] }
