[package]
name = "sov-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
sov-core = { path = "../sov-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1"
x509-parser = "0.16"

